feat: user view condition filter